--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: zEttOn86
 description: MEMO
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars3.githubusercontent.com/u/38281934?s=400&u=b06c90e8bf96ff89340f360978a195b0185a5bd4&v=4
 
 #
 # Flags below are optional
