--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Learning notes
 description: "An Integrated Scientific Blogging Template"
-url: "https://zEttOn86.github.io"
+url: "https://zEttOn86.github.io/"
 
 
 
