--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Learning notes
 description: "An Integrated Scientific Blogging Template"
-url: "https://zEttOn86.github.io/"
+url: "https://zetton86.github.io"
 
 
 
@@ -106,7 +106,7 @@ prose:
       - name: "horizontal"
         field:
           element: "hidden"
-          value: </section></section><section markdown="1" data-background="https://github.com/zEttOn86/zEttOn86.github.io/img/slidebackground.png"><section markdown="1">
+          value: </section></section><section markdown="1" data-background="https://zetton86.github.io/img/slidebackground.png"><section markdown="1">
       - name: "vertical"
         field:
           element: "hidden"
@@ -114,7 +114,7 @@ prose:
       - name: "slideinit"
         field:
           element: "hidden"
-          value: <section markdown="1" data-background="https://github.com/zEttOn86/zEttOn86.github.io/img/slidebackground.png"><section markdown="1">
+          value: <section markdown="1" data-background="https://zetton86.github.io/img/slidebackground.png"><section markdown="1">
       - name: "theme"
         field:
           element: "select"
