--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Learning notes
-description: "An Integrated Scientific Blogging Template"
+description: "Learning notes for me"
 url: "https://zetton86.github.io"
 
 
@@ -9,7 +9,7 @@ url: "https://zetton86.github.io"
 # Secondary Parameters
 baseurl: "/zEttOn86.github.io"
 header-img: img/home-bg.jpg
-headercolor: "#FFFFFF"
+headercolor: "#808080"
 logo: /zEttOn86.github.io/img/logos/Project-Pages-New-Logo-Inverted.png
 
 # Tertiary Parameters
@@ -36,7 +36,7 @@ defaults:
       type: "pages"
     values:
       layout: "project"
-      header-img: "img/home-bg.jpg"
+      header-img: "img/2018-12-27-home-bg.jpg"
 
 # Prose Settings
 prose:
