--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ url: "https://zetton86.github.io"
 
 # Secondary Parameters
 baseurl: "/zEttOn86.github.io"
-header-img: img/home-bg.jpg
-headercolor: "#808080"
+header-img: img/2018-12-27-home-bg.jpg
+headercolor: "#FFFFFF"
 logo: /zEttOn86.github.io/img/logos/Project-Pages-New-Logo-Inverted.png
 
 # Tertiary Parameters
