Post 2018-11-26-How-to-make-website-using-github

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "https://zetton86.github.io"
 baseurl: "/zEttOn86.github.io"
 header-img: img/2018-12-27-home-bg.jpg
 headercolor: "#FFFFFF"
-logo: /zEttOn86.github.io/img/logos/2018-12-27-Logo.png
+logo: 
 
 # Tertiary Parameters
 github_username:  zEttOn86
